--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <body style="background-color: slategrey;">
     <h1> I love you Sweet </h1>
 
-    <img id="photo1" src="/images/photo1.jpg" height="400">
-    <img id="photo2" src="/images/photo2.jpg" height="400">
-    <img id="photo3" src="/images/photo3.jpg" height="400">
-    <img id="photo4" src="/images/photo4.jpg" height="400">
+    <img id="photo1" src="images/photo1.jpg" height="400">
+    <img id="photo2" src="images/photo2.jpg" height="400">
+    <img id="photo3" src="images/photo3.jpg" height="400">
+    <img id="photo4" src="images/photo4.jpg" height="400">
 
     <a href="https://youtu.be/RHn1NqgCLgA">
         <button id="button1">Click if you need a reminder</button>
